--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>temple</h2>
     <p>i am very interest festival</p>
-    <p>i am enjoy at the festival time
-    <p>only 40 day 
+    <p>i am enjoy at the festival time</p>
+    <p>only 40 day</p>
 </body>
 </html>
