--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>i am very interest festival</p>
     <p>i am enjoy at the festival time</p>
     <p>only 40 day</p>
+    <img src="/deer.png" alt="">
 </body>
 </html>
